--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@trade-platform/fastify-sse-plugin",
-  "version": "0.0.0-development",
+  "name": "@nestor/fastify-sse-plugin",
+  "version": "0.0.1",
   "description": "Provide Server-Sent Events to Fastify",
   "main": "index.js",
   "scripts": {
@@ -8,21 +8,13 @@
     "test:coverage": "tap test/*.js --coverage --100 --coverage-report=html",
     "semantic-release": "semantic-release"
   },
-  "bugs": {
-    "url": "https://github.com/trade-platform/fastify-sse-plugin/issues"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/trade-platform/fastify-sse-plugin.git"
+    "url": "https://github.com/nestor/fastify-sse-plugin.git"
   },
-  "homepage": "https://github.com/trade-platform/fastify-sse-plugin.git#readme",
+  "homepage": "https://github.com/nestor/fastify-sse-plugin.git#readme",
   "author": "Lolo_32",
   "license": "MIT",
-  "keywords": [
-    "Fastify",
-    "server-sent events",
-    "sse"
-  ],
   "devDependencies": {
     "fastify": "^2.6.0",
     "request": "^2.81.0",
